--- a/codebook/RMD_codebook_draft_ST.Rmd
+++ b/codebook/RMD_codebook_draft_ST.Rmd
@@ -5196,35 +5196,31 @@ cint_ladder_tbl
 
 ```
 
-# CINT-Relation
-<MARIA: you might want to switch this to full name to be consistent with other measure.> 
+# CINT-Relationship (CINT-R)
+
   
+### CINT-R Description
   
-### CINT-Relation Description
-  
-  <MARIA> please insert a breif description for this measure 
+This set of questions administered as part of the CINT focus on the participant's relationships.
 
+-   There are XX items. 
 
-* No items need to be reverse scored. 
+-   No items need to be reverse scored. 
 
-* This is not a a standardized questionnaire, so missing data rule was not applied. And no subscale was computed. 
-
-
+-   This measure is not a standardized questionnaire with scoring, thus the missing data rule was not applicable. No total scores or subscales were computed. 
+ 
 
 Reference:
-  <Maria, please add a reference if needed> 
+Oregon Social Learning Center (OSLC) Instrument [Unpublished]
   
-### CINT-Relation Variables
+### CINT-R Variables
   
 #### Value Labels and Survey Items 
   
-  All CINT-Relation variables have multiple responses options, value labels for each variable can be found in the survey items table below. 
+All CINT-R variables have multiple responses options, value labels for each variable can be found in the following table:
 
-CINT-Relation survey items are presented in the following table:
-  
-  
 ```{r CINT-relation-var-prep}
-# Pull question wording from Qualtrics data
+# Pull question wording from Qualtrics wording
 cint_relation_word <- qualtrics %>% 
   select(`CINT20`: `CINT37`) %>%
   slice(1)
@@ -5235,9 +5231,8 @@ cint_relation_word_long <- cint_relation_word %>%
                names_to = "var_name",
                values_to = "description") %>% 
   mutate(description = str_replace(description, "^\\d+\\.\\s*", ""),
-         description = str_replace(description, "READ:", ""),
+         description = str_replace(description, "READ:", ""))%>%
          #description = str_replace(description, "Assessor Note: Assessor give them a few moments to decide.", "\n"),
-         var_name = str_to_lower(var_name)) %>% 
   # Edits Variable description and value
   mutate(description = if_else(var_name == "cint20", " How many people in total have you been involved with romantically or 
                                sexually in the last 6 months (including current or any others)?", description)) %>%
@@ -5253,15 +5248,15 @@ cint_relation_word_long <- cint_relation_word %>%
    mutate(description = if_else(var_name == "cint30", "How would you describe the way your partner drinks alcohol, 
                                 on average, in the past 6 months?", description)) %>%    
     mutate(description = if_else(var_name == "cint30_7_text", "How would you describe the way your partner drinks 
-                                 alcohol, on average, in the past 6 months? - 7. Other: (Specify) - Text?", description)) %>%     
+                                 alcohol, on average, in the past 6 months? If 'Other' selected, please specify:", description)) %>%     
     mutate(description = if_else(var_name == "cint31", "How would you describe the way your partner smokes pot, on average, 
                                  in the past 6 months?", description)) %>%     
     mutate(description = if_else(var_name == "cint31_7_text", "How would you describe the way your partner smokes pot, 
-                                 on average, in the past 6 months? - 7. Other: (Specify) - Text", description)) %>%
+                                 on average, in the past 6 months? If 'Other' selected, please specify", description)) %>%
     mutate(description = if_else(var_name == "cint31_7_text", "How would you describe the way your partner uses hard drugs, 
                                  on average, in the past 6 months? ", description)) %>%    
     mutate(description = if_else(var_name == "cint32_7_text", "How would you describe the way your partner uses hard drugs, 
-                                 on average, in the past 6 months? - 7. Other: (Specify) - Text", description)) %>%    
+                                 on average, in the past 6 months? If 'Other' selected, please specify", description)) %>%    
     mutate(description = if_else(var_name == "cint33", "What is the highest level of school your partner has finished so far?", description)) %>%  
     mutate(description = if_else(var_name == "cint34", "On a scale of 1-10, with 1 being not at all supportive and 10 being very supportive, 
                                  how emotionally supportive is/was your partner of you in the last 6 months?", description)) %>%
@@ -5277,94 +5272,94 @@ cint_relation_word_long <- cint_relation_word %>%
                                                                                    \n -66 = Don't Know
                                                                                    \n -77  = Decline to Answer", `Lable Value`)) %>%
     mutate(`Lable Value` = if_else(var_name %in% c( "cint20", "cintq2", "cint12", "cint30_7_text", "cint31_7_text", "cint32_7_text"), "Open Text Entry", `Lable Value`)) %>%
-    mutate(`Lable Value` = if_else(var_name %in% c("cintq3"), "1 = 1. Married
-                                                               \n 2 = 2. Living together
-                                                               \n 3 = 3. Dating or seeing each other, but not living together. This includes casual dating.
-                                                               \n 4 = 4. Married, but separated
-                                                               \n -77 = 5. Decline to Answer", `Lable Value`)) %>%
-      mutate(`Lable Value` = if_else(var_name %in% c("cint26"), "1 = 1 - Not at all close
-                                                                 \n 2 = 2
-                                                                 \n 3 = 3
-                                                                 \n 4 = 4
-                                                                 \n 5 = 5
-                                                                 \n 6 = 6
-                                                                 \n 7 = 7
-                                                                 \n 8 = 8
-                                                                 \n 9 = 9
-                                                                 \n 10 = 10 - Extremely Close
+    mutate(`Lable Value` = if_else(var_name %in% c("cintq3"), "1 = Married
+                                                               \n 2 = Living together
+                                                               \n 3 = Dating or seeing each other, but not living together. This includes casual dating.
+                                                               \n 4 = Married, but separated
+                                                               \n -77 = Decline to Answer", `Lable Value`)) %>%
+      mutate(`Lable Value` = if_else(var_name %in% c("cint26"), "1 = Not at all close
+                                                                 \n 2
+                                                                 \n 3 
+                                                                 \n 4 
+                                                                 \n 5 
+                                                                 \n 6 
+                                                                 \n 7 
+                                                                 \n 8 
+                                                                 \n 9 
+                                                                 \n 10 = Extremely Close
                                                                  \n -77 = Decline to Answer", `Lable Value`)) %>%
-      mutate(`Lable Value` = if_else(var_name %in% c("cint27"), "1 = 1 - Not at all well
-                                                                 \n 2 = 2
-                                                                 \n 3 = 3
-                                                                 \n 4 = 4
-                                                                 \n 5 = 5
-                                                                 \n 6 = 6
-                                                                 \n 7 = 7
-                                                                 \n 8 = 8
-                                                                 \n 9 = 9
-                                                                 \n 10 = 10 - Very Well
+      mutate(`Lable Value` = if_else(var_name %in% c("cint27"), "1 = Not at all well
+                                                                 \n 2 
+                                                                 \n 3 
+                                                                 \n 4 
+                                                                 \n 5 
+                                                                 \n 6 
+                                                                 \n 7 
+                                                                 \n 8 
+                                                                 \n 9 
+                                                                 \n 10 = Very Well
                                                                  \n -77 = Decline to Answer", `Lable Value`)) %>%
-      mutate(`Lable Value` = if_else(var_name %in% c("cint30"), "0 = 1. Never
-                                                                 1 = 2. Drank alcohol only a few times during the year
-                                                                 \n 2 = 3. Drinks regularly for a few weeks or more, then doesn't for a few weeks or more or drinks, then stops drinking (ex: became clean and sober)
-                                                                 \n 3 = 4. Drinks about once a month
-                                                                 \n 4 = 5. Drinks on weekends or mostly on weekends
-                                                                 \n 5 = 6. Drinks daily or almost daily
-                                                                 \n 6 = 7. Other: (Specify)
-                                                                 \n -66 = 8. Don't know
+      mutate(`Lable Value` = if_else(var_name %in% c("cint30"), "0 = Never
+                                                                 1 = Drank alcohol only a few times during the year
+                                                                 \n 2 = Drinks regularly for a few weeks or more, then doesn't for a few weeks or more or drinks, then stops drinking (ex: became clean and sober)
+                                                                 \n 3 = Drinks about once a month
+                                                                 \n 4 = Drinks on weekends or mostly on weekends
+                                                                 \n 5 = Drinks daily or almost daily
+                                                                 \n 6 = Other: (Specify)
+                                                                 \n -66 = Don't know
                                                                  \n -77 = Decline to Answer", `Lable Value`)) %>%
-      mutate(`Lable Value` = if_else(var_name %in% c("cint31"), "0 = 1. Never
-                                                              \n 1 = 2. Smoked only a few times during the year
-                                                              \n 2 = 3. Smokes regularly for a few weeks or more, then doesn't for a few weeks or more or used, then stopped (ex: became clean and sober)
-                                                              \n 3 = 4. Smokes about once a month
-                                                              \n 4 = 5. Smokes on weekends or mostly on weekends or a few times a week
-                                                              \n 5 = 6. Smokes daily or almost daily
-                                                              \n 6 = 7. Other: (Specify)
-                                                              \n -66 = 8. Don't know
+      mutate(`Lable Value` = if_else(var_name %in% c("cint31"), "0 = Never
+                                                              \n 1 = Smoked only a few times during the year
+                                                              \n 2 = Smokes regularly for a few weeks or more, then doesn't for a few weeks or more or used, then stopped (ex: became clean and sober)
+                                                              \n 3 = Smokes about once a month
+                                                              \n 4 = Smokes on weekends or mostly on weekends or a few times a week
+                                                              \n 5 = Smokes daily or almost daily
+                                                              \n 6 = Other: (Specify)
+                                                              \n -66 = Don't know
                                                               \n -77 = Decline to Answer" , `Lable Value`)) %>%
-     mutate(`Lable Value` = if_else(var_name %in% c("cint32"), "0 = 1. Never
-                                                              \n 1 = 2. Used hard drugs a limited number of times
-                                                              \n 2 = 3. Uses drugs regularly for a few weeks or more, then don't for a few weeks or more, or used, then stopped (ex: became clean and sober)
-                                                              \n 3 = 4. Uses drugs about once a month
-                                                              \n 4 = 5. Uses hard drugs on weekends or mostly on weekends or a few times a week
-                                                              \n 5 = 6. Uses hard drugs daily or almost daily
-                                                              \n 6 = 7. Other: (Specify)
-                                                              \n -66 = 8. Don't know
+     mutate(`Lable Value` = if_else(var_name %in% c("cint32"), "0 = Never
+                                                              \n 1 = Used hard drugs a limited number of times
+                                                              \n 2 = Uses drugs regularly for a few weeks or more, then don't for a few weeks or more, or used, then stopped (ex: became clean and sober)
+                                                              \n 3 = Uses drugs about once a month
+                                                              \n 4 = Uses hard drugs on weekends or mostly on weekends or a few times a week
+                                                              \n 5 = Uses hard drugs daily or almost daily
+                                                              \n 6 = Other: (Specify)
+                                                              \n -66 = Don't know
                                                               \n -77 = Decline to Answer", `Lable Value`)) %>%
-     mutate(`Lable Value` = if_else(var_name %in% c("cint33"), "1 = 1. Any grade up to the 12th grade, but not having a High School Diploma/GED
-                                                             \n 2 = 2. GED or Equivalency
-                                                             \n 3 = 3. High School Diploma
-                                                             \n 4 = 4. Attended Community College but no A.A.(Associates) degree
-                                                             \n 5 = 5. Community College degree, (A.A.)
-                                                             \n 6 = 6. Attended 4 year University or College, but no degree
-                                                             \n 7 = 7. B.A., B.S., BSN degree
-                                                             \n 8 = 8. Graduate degree (MA, MS, PhD)
-                                                             \n 9 = 9. Other (Technical, Vocational school)
-                                                             \n -66 = 10. Don't know
+     mutate(`Lable Value` = if_else(var_name %in% c("cint33"), "1 = Any grade up to the 12th grade, but not having a High School Diploma/GED
+                                                             \n 2 = GED or Equivalency
+                                                             \n 3 = High School Diploma
+                                                             \n 4 = Attended Community College but no A.A.(Associates) degree
+                                                             \n 5 = Community College degree, (A.A.)
+                                                             \n 6 = Attended 4 year University or College, but no degree
+                                                             \n 7 = B.A., B.S., BSN degree
+                                                             \n 8 = Graduate degree (MA, MS, PhD)
+                                                             \n 9 = Other (Technical, Vocational school)
+                                                             \n -66 = Don't know
                                                              \n -77 = Decline to Answer" , `Lable Value`)) %>%
-       mutate(`Lable Value` = if_else(var_name %in% c("cint34"), "1 = 1 (Not at all Supportive)
-                                                                 \n 2 = 2
-                                                                 \n 3 = 3
-                                                                 \n 4 = 4
-                                                                 \n 5 = 5
-                                                                 \n 6 = 6
-                                                                 \n 7 = 7
-                                                                 \n 8 = 8
-                                                                 \n 9 = 9
+       mutate(`Lable Value` = if_else(var_name %in% c("cint34"), "1 = (Not at all Supportive)
+                                                                 \n 2 
+                                                                 \n 3 
+                                                                 \n 4 
+                                                                 \n 5 
+                                                                 \n 6 
+                                                                 \n 7
+                                                                 \n 8 
+                                                                 \n 9 
                                                                  \n 10 = 10 (Very Supportive)
                                                                  \n -77 = Decline to Answer" , `Lable Value`)) %>%
-         mutate(`Lable Value` = if_else(var_name %in% c("cint35"), "0 = 1. None
-                                                                 \n 1 = 2. One
-                                                                 \n 2 = 3. Two or three
-                                                                 \n 3 = 4. Four or more
+         mutate(`Lable Value` = if_else(var_name %in% c("cint35"), "0 = None
+                                                                 \n 1 = One
+                                                                 \n 2 = Two or three
+                                                                 \n 3 = Four or more
                                                                  \n -77 = Decline to Answer" , `Lable Value`)) %>%
-           mutate(`Lable Value` = if_else(var_name %in% c("cint36"), "0 = 1. Never
-                                                                 \n 1 = 2. Less than once a week
-                                                                 \n 2 = 3. One
-                                                                 \n 3 = 4. Two or three
-                                                                 \n 4 = 5. Four or five
-                                                                 \n 5 = 6. Six or seven
-                                                                 \n 6 = 7. N/A, current living situation/setting provides no opportunity for socialization ( if says she is in a locked setting)
+           mutate(`Lable Value` = if_else(var_name %in% c("cint36"), "0 = Never
+                                                                 \n 1 = Less than once a week
+                                                                 \n 2 = One
+                                                                 \n 3 = Two or three
+                                                                 \n 4 = Four or five
+                                                                 \n 5 = Six or seven
+                                                                 \n 6 = N/A, current living situation/setting provides no opportunity for socialization ( if says she is in a locked setting)
                                                                  \n -77 = Decline to Answer" , `Lable Value`))
   
   
@@ -5400,7 +5395,7 @@ Only missing percentages of variables are presented.
 ```{r cint_relation-missing}
 # Create subset of BSI items
 cint_relation_data_subset <- complete %>%
-  select(cint_pregnancy_screen:cint_income_support, cint_identity)
+  select(cint20, cintq2, cintq3, cint26:cint37)
 
 # Calculate the summary statistics for each variable
 ## mean is showing 2 decimals per authors
